web crawling studying finish

--- a/web_crawling/StaticWebPage.ipynb
+++ b/web_crawling/StaticWebPage.ipynb
@@ -3942,11 +3942,106 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "from bs4 import "
+    "from bs4 import BeautifulSoup as bs\n",
+    "import requests\n",
+    "\n",
+    "query = '추석'\n",
+    "\n",
+    "url = 'https://search.naver.com/search.naver?where=news&sm=tab_jum&query='+'%s'%query\n",
+    "\n",
+    "response = requests.get(url)\n",
+    "html_text = response.text\n",
+    "\n",
+    "soup = bs(response.text, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "부안 행안서 올해 첫 모내기…추석 전인 9월 상순께 수확 가능\n",
+      "'청량~옥동' 추석 전 완전 개통..간선도로망 '속도'\n",
+      "천안시, 올해 첫 모내기…삼광벼, 9월 추석 전후 수확\n",
+      "\"추석전 햅쌀 출하한다\"…군산지역 14.9㏊서 모내기\n",
+      "5월 끝으로 추석 전까지 공휴일 딱 '2번' 밖에 없다\n",
+      "추석 연휴 이웃 모녀 살해한 50대 무기징역 선고\n",
+      "밀양시, 올해 첫 모내기…추석 전 햅쌀 조기 출하 목표\n",
+      "김종인 “30석 이상도 가능”...추석전 제3지대 깃발 꽂을까\n",
+      "김종인 “추석 전 신당 창당해야 총선 치러”\n",
+      "추석에 모녀 살해한 50대 무기징역, 법원 “사회로부터 격리해야”\n"
+     ]
+    }
+   ],
+   "source": [
+    "news_titles = soup.select(\"a.news_tit\")\n",
+    "for i in news_titles:\n",
+    "    title = i.get_text()\n",
+    "    print(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.pressian.com/pages/articles/2023050912473945819?utm_source=naver&utm_medium=search\n",
+      "http://web.ubc.co.kr/wp/archives/107269\n",
+      "https://www.yna.co.kr/view/AKR20230502046700063?input=1195m\n",
+      "http://www.newsis.com/view/?id=NISX20230502_0002287907&cID=10808&pID=10800\n",
+      "https://www.insight.co.kr/news/437599\n",
+      "https://news.kbs.co.kr/news/view.do?ncd=7663336&ref=A\n",
+      "https://www.cnbnews.com/news/article.html?no=599673\n",
+      "https://www.mk.co.kr/article/10722069\n",
+      "http://www.ikbc.co.kr/article/view/kbc202304260029\n",
+      "https://biz.chosun.com/topics/law_firm/2023/04/28/FEPF5KFSGNBB3CA2ZUIJCYGIKM/?utm_source=naver&utm_medium=original&utm_campaign=biz\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in news_titles:\n",
+    "    href = i.attrs['href']\n",
+    "    print(href)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "news_thumbnail = soup.select(\"img.thumb.api_get\")\n",
+    "link_thumbnail = []\n",
+    "\n",
+    "for img in news_thumbnail:\n",
+    "    link_thumbnail.append(img.attrs['src'])\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "path_folder = './img_download/'\n",
+    "if not os.path.isdir(path_folder):\n",
+    "    os.mkdir(path_folder)\n",
+    "\n",
+    "from urllib.request import urlretrieve\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "for link in link_thumbnail:\n",
+    "    i += 1\n",
+    "    urlretrieve(link, path_folder + f'{i}.jpg')"
    ]
   }
  ],
