--- a/data_visualization/shopping_survey_visualization.ipynb
+++ b/data_visualization/shopping_survey_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,111 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "plt.rcParams['font.family'] = 'Malgun Gothic'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"./data/shopping_survey.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phone = df['기프티콘 발송을 위한 휴대폰 번호 (ex 01012345678)']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phone_ = phone.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      01026423109\n",
+       "1      01063169037\n",
+       "2      01055150403\n",
+       "3      01096126922\n",
+       "4      01089837651\n",
+       "          ...     \n",
+       "194    01077235302\n",
+       "195    01051229886\n",
+       "196    01041854098\n",
+       "197    01039341439\n",
+       "198    01023186310\n",
+       "Name: 기프티콘 발송을 위한 휴대폰 번호 (ex 01012345678), Length: 188, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phone_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 38, 183, 104,  25,  14])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.random.randint(0, 188, size=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40     01046347833\n",
+       "194    01077235302\n",
+       "110    01099232262\n",
+       "26     01076699815\n",
+       "15     01050355981\n",
+       "Name: 기프티콘 발송을 위한 휴대폰 번호 (ex 01012345678), dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phone_.iloc[[ 38, 183, 104,  25,  14]]"
    ]
   },
   {
