--- a/CS/computer_terminology.ipynb
+++ b/CS/computer_terminology.ipynb
@@ -29,6 +29,17 @@
     "- 데이터를 표시하는 표현 방법\n",
     "- 서버 클라이언트 간의 교류에서 많이 사용"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sweep\n",
+    "- 일련의 실험 또는 테스트를 의미\n",
+    "- \"하이퍼파라미터 스윕\"은 하이퍼파라미터 값을 시스템에 적용후에 각 조합을 테스트하는 과정\n",
+    "- ex) grid search, random search, bayesian optimization"
+   ]
   }
  ],
  "metadata": {
