crawling movie reservation

--- a/web_crawling/ClothSizeCrawling.ipynb
+++ b/web_crawling/ClothSizeCrawling.ipynb
@@ -9,6 +9,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## xpath를 이용한 노드 찾기\n",
+    "### '/html/body/div/div[3]/ul/li[descendant::*[@class=\"imax\"]]'\n",
+    "- li[조건] = 해당 조건을 만족하는 li 노드들\n",
+    "- *[@class=\"imax\"] = 어떤 노드건 class속성이 imax인 노드들 (@가 속성을 뜻함)\n",
+    "- descendant::검색노드[조건] = 자식노드들 중에 조건을 만족하는 검색노드들"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
