use apscheduler, telegram, ec2

--- a/CS/computer_terminology.ipynb
+++ b/CS/computer_terminology.ipynb
@@ -40,6 +40,18 @@
     "- \"하이퍼파라미터 스윕\"은 하이퍼파라미터 값을 시스템에 적용후에 각 조합을 테스트하는 과정\n",
     "- ex) grid search, random search, bayesian optimization"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 동기(Synchronous) VS 비동기(Asynchronous)\n",
+    "- ***동기*** 방식은 서버에서 요청을 보냈을 때 응답이 돌아와야 다음 동작 실행 가능 \n",
+    "- ***비동기*** 방식은 요청을 보냈을 때 응답 상태와 상관없이 다음 동작 실행 가능\n",
+    "\n",
+    "![](https://velog.velcdn.com/images%2Fdaybreak%2Fpost%2F1be2c518-3360-4354-beff-678bc4e13fef%2F%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA%202020-07-09%2016.21.39.png)"
+   ]
   }
  ],
  "metadata": {
