--- a/FSDL_2022/pytorch-lightning_wandb.ipynb
+++ b/FSDL_2022/pytorch-lightning_wandb.ipynb
@@ -13,16 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pytorch_lightning as pl\n",
+    "from pytorch_lightning.callbacks import Callback\n",
     "from pytorch_lightning.loggers import WandbLogger\n",
+    "\n",
+    "import wandb\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torchvision import transforms\n"
+    "from torchvision import transforms\n",
+    "from torchvision.datasets import CIFAR10\n",
+    "from torch.utils.data import random_split\n",
+    "from torch.utils.data import DataLoader"
    ]
   },
   {
@@ -31,13 +37,55 @@
    "metadata": {},
    "source": [
     "## DataModule \n",
-    "- \n",
-    "- 디스크에 저장"
+    "- 데이터 준비\n",
+    "- 디스크에 저장\n",
+    "- 데이터 전처리\n",
+    "- dataloader 내부 래핑"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### init\n",
+    "- 하이퍼파라미터 설정\n",
+    "- 데이터 변환 파이프라인 정의"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### prepare_data\n",
+    "- 디스크에 저장하거나 분산설정에서 단일 GPU에서만 수행하는 작업\n",
+    "- 상태 할당은 x (self.tmp = ...)\n",
+    "- 데이터셋 다운로드 "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### setup_data\n",
+    "- 데이터 로드\n",
+    "- split train, valid, test => stage(\"fit\", \"test\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dataloader\n",
+    "- setup에서 준비한 데이터세트를 dataloader로 래핑"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,8 +103,108 @@
     "        self.dims = (3, 32, 32)\n",
     "        self.num_classes = 10\n",
     "\n",
-    "    def prepare_data"
+    "    def prepare_data(self):\n",
+    "        CIFAR10(self.data_dir, train=True, download=True)\n",
+    "        CIFAR10(self.data_dir, train=False, download=True)\n",
+    "\n",
+    "    def setup(self, stage=None):\n",
+    "        if stage == 'fit' or stage is None:\n",
+    "            cifar_full = CIFAR10(self.data_dir, train=True, transform=self.transform)\n",
+    "            self.cifar_train, self.cifar_val = random_split(cifar_full, [45000, 5000])\n",
+    "        \n",
+    "        if stage == 'test' or stage is None:\n",
+    "            self.cifar_test = CIFAR10(self.data_dir, train=False, transform=self.transform)\n",
+    "\n",
+    "    def train_dataloader(self):\n",
+    "        return DataLoader(self.cifar_train, batch_size=self.batch_size, shuffle=True)\n",
+    "    \n",
+    "    def val_dataloader(self):\n",
+    "        return DataLoader(self.cifar_val, batch_size=self.batch_size)\n",
+    "    \n",
+    "    def test_dataloader(self):\n",
+    "        return DataLoader(self.cifar_test, batch_size=self.batch_size)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom Callback"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### init"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### callback Hooks\n",
+    "- callback 호출 위치"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ImagePredictionLogger\n",
+    "- custom callback\n",
+    "- 일부 이미지 샘플에 대한 모델의 예측 시각화에 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ImagePredictionLogger(Callback):\n",
+    "    def __init__(self, val_samples, num_samples=32):\n",
+    "        super().__init__()\n",
+    "        self.num_samples = num_samples\n",
+    "        self.val_imgs, self.val_labels = val_samples\n",
+    "\n",
+    "    def on_validation_epoch_end(self, trainer, pl_module):\n",
+    "        val_imgs = self.val_imgs.to(device=pl_module.device)\n",
+    "        val_labels = self.val_labels.to(device=pl_module.device)\n",
+    "\n",
+    "        logits = pl_module(val_imgs)\n",
+    "        preds = torch.argmax(logits, -1)\n",
+    "\n",
+    "        trainer.logger.experiment.log({\n",
+    "            \"examples\": [wandb.Image(x, caption=f\"Pred:{pred}, Label:{y}\")\n",
+    "                            for x, pred, y in zip(val_imgs[:self.num_samples], \n",
+    "                                                  preds[:self.num_samples], \n",
+    "                                                  val_labels[:self.num_samples])]\n",
+    "        })"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LightningModule\n",
+    "- Computations => __init__\n",
+    "- train loop => training_step\n",
+    "- validation loop => validation_step\n",
+    "- test loop => test_step\n",
+    "- optimizers => configure_optimizers"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
