add computer_terminology and add crawling tip

--- a/CS/computer_terminology.ipynb
+++ b/CS/computer_terminology.ipynb
@@ -52,6 +52,17 @@
     "\n",
     "![](https://velog.velcdn.com/images%2Fdaybreak%2Fpost%2F1be2c518-3360-4354-beff-678bc4e13fef%2F%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA%202020-07-09%2016.21.39.png)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### API (Application Programming Interface)\n",
+    "- 중간에서 양쪽 서버를 연결해주는 역할\n",
+    "\n",
+    "![](https://mblogthumb-phinf.pstatic.net/MjAyMjA1MDZfNjIg/MDAxNjUxODIwODgxNDk3.Zp0UHTM2WxbdAbLH7OEq0WjemMPAmSL_Q3U9Eju39J8g.p0aOVWgeCJGOL61QQMIPlaNo-KB6ryHvUIlt8IpesJAg.PNG.kistiscienceon/4.png?type=w800)"
+   ]
   }
  ],
  "metadata": {
