--- a/web_crawling/ClothSizeCrawling.ipynb
+++ b/web_crawling/ClothSizeCrawling.ipynb
@@ -17,7 +17,11 @@
     "### '/html/body/div/div[3]/ul/li[descendant::*[@class=\"imax\"]]'\n",
     "- li[조건] = 해당 조건을 만족하는 li 노드들\n",
     "- *[@class=\"imax\"] = 어떤 노드건 class속성이 imax인 노드들 (@가 속성을 뜻함)\n",
-    "- descendant::검색노드[조건] = 자식노드들 중에 조건을 만족하는 검색노드들"
+    "- descendant::검색노드[조건] = 자식노드들 중에 조건을 만족하는 검색노드들\n",
+    "\n",
+    "### TIP\n",
+    "- 페이지로 이동하기 전에 얻은 태그들을 이동한 후에 사용 못함  \n",
+    "    ex) 페이지 이동전에 얻은 a태그, 페이지 이동후에 전에 얻은 a태그 사용 불가"
    ]
   },
   {
