add api, interface

--- a/CS/computer_terminology.ipynb
+++ b/CS/computer_terminology.ipynb
@@ -58,10 +58,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### interface\n",
+    "- 서로 다른 두 개의 시스템, 장치 사이에서 정보나 신호를 주고받는 경우의 접점이나 경계면\n",
+    "- ex) 사용자와 컴퓨터 사이에 키보드와 모니터\n",
+    "- 사용자가 소통하기 위한 버튼 같은 것을 user interface(UI) 라고 함"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### API (Application Programming Interface)\n",
-    "- 중간에서 양쪽 서버를 연결해주는 역할\n",
+    "- 응용 프로그램에서 소통하기 위한 접점\n",
+    "- 응용 프로그램 (Application): 운영체제에서 실행되는 모든 소프트웨어\n",
+    "- 애플리케이션에서 데이터를 읽거나 쓰기 위해 사용하는 인터페이스\n",
+    "- private API, public API\n",
     "\n",
-    "![](https://mblogthumb-phinf.pstatic.net/MjAyMjA1MDZfNjIg/MDAxNjUxODIwODgxNDk3.Zp0UHTM2WxbdAbLH7OEq0WjemMPAmSL_Q3U9Eju39J8g.p0aOVWgeCJGOL61QQMIPlaNo-KB6ryHvUIlt8IpesJAg.PNG.kistiscienceon/4.png?type=w800)"
+    "![](./sample1.png)\n",
+    "![](./sample2.png)\n",
+    "출처: https://youtu.be/Jg3FFBLyhK0"
    ]
   }
  ],
