study LLM quantization int8

--- a/LargeLanguageModel/Experiment_QLora_hyperparameter.ipynb
+++ b/LargeLanguageModel/Experiment_QLora_hyperparameter.ipynb
@@ -1823,6 +1823,14 @@
     "    - lm_head에서 lora parameters가 float16으로 되어있음 -> 해당 파라미터에서 에러발생\n",
     "    - lm_head만 target_modules에서 생략하니까 실행됨"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reference\n",
+    "https://www.databricks.com/kr/blog/efficient-fine-tuning-lora-guide-llms"
+   ]
   }
  ],
  "metadata": {
