--- a/LargeLanguageModel/Quantization_GPTQ.ipynb
+++ b/LargeLanguageModel/Quantization_GPTQ.ipynb
@@ -196,6 +196,14 @@
     "result = generator(\"I have a dream\", do_sample=True, max_length=50)[0]['generated_text']\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reference\n",
+    "https://towardsdatascience.com/4-bit-quantization-with-gptq-36b0f4f02c34"
+   ]
   }
  ],
  "metadata": {
@@ -214,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.1.0"
   }
  },
  "nbformat": 4,
